# wasp

./: README.md
fw/: .gitignore  Cargo.toml  Embed.toml  LICENSE-MIT  README.md
fw/src/: main.rs
hw/: README.md  sym-lib-table  wasp-cache.lib  wasp.kicad_pcb  wasp.lib  wasp.pro  wasp.sch
