[package]
name = "wasp"
version = "0.1.0"
authors = ["G. Salazar <glbsalazar@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3.5"
# TODO: Try to update
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
rtt-logger = "0.1"
# Panic behaviour, see https://crates.io/keywords/panic-impl for alternatives
drogue-esp8266 = { git = "https://github.com/glbsalazar/drogue-esp8266" }
panic-halt = "0.2"
stm32f4xx-hal = { version = "0.8", features = ["rt", "stm32f407"] }
cortex-m-rtic = "0.5.3"
# TODO: replace drogue-network with embedded-nal
drogue-network = "0.2.0"
embedded-nal = "0.2.0"
heapless = "0.5"
log = "0.4.11"

[profile.release]
opt-level = "s" # optimize for size
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
